--- a/index.html
+++ b/index.html
@@ -3,29 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The House of NOÀRA</title>
+    <title>THE HOUSE OF NOARA</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Playfair+Display:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #1a1a1a; /* Charcoal */
-            color: #f5f5dc; /* Cream */
-            font-family: 'Playfair Display', serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
+            background-color: #050505;
+            color: #f0f0f0;
+            font-family: 'Inter', sans-serif;
+            overflow: hidden;
         }
-        .content { max-width: 600px; padding: 20px; }
-        h1 { font-weight: 300; letter-spacing: 5px; margin-bottom: 10px; }
-        p { font-style: italic; opacity: 0.8; line-height: 1.6; }
+        .serif { font-family: 'Playfair Display', serif; }
+        .glimmer {
+            background: linear-gradient(90deg, #050505, #1a1a1a, #050505);
+            background-size: 200% 100%;
+            animation: shimmer 8s infinite linear;
+        }
+        @keyframes shimmer {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
+        }
+        .fade-in {
+            animation: fadeIn 3s ease-out forwards;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
 </head>
-<body>
-    <div class="content">
-        <h1>NOÀRA</h1>
-        <p>A scent written in the rain.</p>
-        <p style="font-size: 0.8em; margin-top: 40px;">Monsoon Verse: Edition 01<br>Coming Summer 2026</p>
-    </div>
+<body class="flex flex-col justify-between h-screen p-8 md:p-16">
+
+    <header class="fade-in" style="animation-delay: 0.5s;">
+        <h1 class="text-xs tracking-[0.5em] font-light uppercase">The House of NOARA</h1>
+    </header>
+
+    <main class="flex flex-col items-center justify-center text-center">
+        <div class="max-w-2xl fade-in" style="animation-delay: 1s;">
+            <h2 class="serif italic text-4xl md:text-6xl mb-6 font-light leading-tight">
+                Atmospheric Objects <br> for the Modern Soul.
+            </h2>
+            <div class="h-[1px] w-12 bg-zinc-800 mx-auto mb-8"></div>
+            <p class="text-[10px] md:text-xs tracking-[0.3em] uppercase text-zinc-500">
+                Inception 2026 &bull; Edition 01 Emerging
+            </p>
+        </div>
+    </main>
+
+    <footer class="flex flex-col md:flex-row justify-between items-end md:items-center text-[10px] tracking-[0.2em] uppercase text-zinc-600 fade-in" style="animation-delay: 1.5s;">
+        <div>
+            <p>Archiving the Invisible</p>
+        </div>
+        <div class="mt-4 md:mt-0 italic serif lowercase text-sm text-zinc-400">
+            Coming Soon to noara.in
+        </div>
+    </footer>
+
+    <div class="fixed inset-0 -z-10 glimmer opacity-30"></div>
+
 </body>
 </html>
